--- a/index.html
+++ b/index.html
@@ -33,19 +33,17 @@
     }
     .logo-container {
       display: flex;
-      align-items: center;
-      gap: 15px;
+      flex-direction: column;
+      align-items: flex-start;
     }
     header img {
-      height: 70px; /* Logo size */
+      height: 70px; /* Bigger logo */
     }
     .slogan {
-      font-size: 0.95rem; /* Reduced font size */
-      font-style: italic; /* Italicized */
-      font-weight: normal;
-      color: var(--gold); /* Highlight colour */
-      max-width: 160px;
-      line-height: 1.2;
+      font-size: 0.9rem; /* Smaller font */
+      font-style: italic;
+      color: var(--gold); /* Stands out in gold */
+      margin-top: 5px;
     }
     nav a {
       margin: 0 10px;
@@ -103,7 +101,7 @@
     <a href="/">
       <img src="images/logo1.png" alt="TichaAfrica Logo">
     </a>
-    <div class="slogan">Teach Smart.Lead Change.</div>
+    <div class="slogan">Teach Smart. Lead Change.</div>
   </div>
   <nav>
     <a href="#why">Why</a>
@@ -121,8 +119,8 @@
 
 <section id="why">
   <h3>Why TichaAfrica Exists</h3>
-  <p>Across Africa, teachers create miracles every day — with limited tools, overcrowded classes, and little support. Yet, most AI tools are built far away, without their voices.</p>
-  <p>We believe teachers should lead the AI transformation in education. Guided by <strong>UNESCO’s AI Competency Framework for Teachers (AI CFT)</strong> and the <strong>African Union Continental AI Strategy</strong>, TichaAfrica ensures that global standards meet African realities through teacher wisdom and experience.</p>
+  <p>Every day, African teachers achieve the extraordinary—teaching overcrowded classes, with scarce resources, and little recognition. Yet, as AI reshapes global education, their voices are often missing from the table.</p>
+  <p>TichaAfrica exists to change that. We believe the future of learning must be built with teachers, not around them. By aligning with UNESCO’s AI Competency Framework for Teachers (AI CFT) and the African Union Continental AI Strategy, we bridge global innovation with African realities—turning teachers’ expertise into the driving force of AI in our classrooms.</p>
 </section>
 
 <section id="alliance">
