--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       font-size: 0.7rem; /* Smaller font */
       font-style: italic;
       color: var(--gold); /* Stands out in gold */
-      margin-top: 5px;
+      margin-top: 3px;
     }
     nav a {
       margin: 0 10px;
@@ -113,7 +113,7 @@
 <section class="hero">
   <h2>Teachers Deserve More Than Tools. They Deserve a Voice.</h2>
   <p>Africa’s first teacher-led, mobile-first AI training platform — built by teachers, for African classrooms.</p>
-  <a href="https://tally.so/forms/3jrJG9/" class="btn">I’m a Teacher — I’m Ready to Lead the Change.</a>
+  <a href="https://tally.so/r/3jrJG9" class="btn">I’m a Teacher — I’m Ready to Lead the Change.</a>
   <img src="images/hero4.jpg" alt="TichaAfrica Hero">
 </section>
 
