--- a/index.html
+++ b/index.html
@@ -5,127 +5,76 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>TichaAfrica – Teachers Leading Africa’s AI Education</title>
   <meta name="description" content="TichaAfrica empowers teachers to lead Africa’s AI education revolution. Join the alliance shaping an inclusive, human-first future for learning." />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="images/TichaAfrica_Favicon.png" />
+
+  <!-- Performance: Preload fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
+
   <style>
-    :root {
-      --navy: #003366;
-      --leaf: #2e9a4d;
-      --gold: #ffd700;
-      --muted: #f8f9fa;
-      --white: #ffffff;
-      --text: #003366;
-    }
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      color: var(--text);
-      background: var(--white);
-      line-height: 1.6;
-    }
-    header {
-      background: var(--white);
-      padding: 20px;
-      border-bottom: 2px solid var(--leaf);
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      flex-wrap: wrap;
-    }
-    .logo-container {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-    }
-    header img {
-      height: 70px; /* Bigger logo */
-    }
-    .slogan {
-      font-size: 0.7rem; /* Smaller font */
-      font-style: italic;
-      color: var(--gold); /* Stands out in gold */
-      margin-top: 3px;
-    }
-    nav a {
-      margin: 0 10px;
-      color: var(--leaf);
-      text-decoration: none;
-      font-weight: bold;
-    }
-    .hero {
-      background: linear-gradient(135deg, var(--navy), var(--leaf));
-      color: var(--white);
-      text-align: center;
-      padding: 60px 20px;
-    }
-    .hero img {
-      max-width: 100%;
-      height: auto;
-      margin-top: 20px;
-      border-radius: 10px;
-    }
-    .btn {
-      display: inline-block;
-      background: var(--gold);
-      color: var(--navy);
-      padding: 14px 28px;
-      border-radius: 30px;
-      font-weight: bold;
-      text-decoration: none;
-      transition: background 0.3s ease;
-    }
-    .btn:hover {
-      background: #e6c200;
-    }
-    section {
-      padding: 50px 20px;
-      max-width: 900px;
-      margin: 0 auto;
-    }
-    footer {
-      background: var(--navy);
-      color: var(--white);
-      text-align: center;
-      padding: 20px;
-      margin-top: 40px;
-    }
-    footer a {
-      color: var(--gold);
-      text-decoration: none;
-    }
+    :root{--navy:#003366;--leaf:#2e9a4d;--gold:#ffd700;--muted:#f8f9fa;--white:#fff;--text:#1a1a1a;--shadow:rgba(0,0,0,.08)}
+    *{margin:0;padding:0;box-sizing:border-box}
+    body{font-family:"Poppins",sans-serif;line-height:1.6;color:var(--text);background:var(--white);scroll-behavior:smooth}
+    header{background:var(--white);padding:12px 24px;display:flex;align-items:center;justify-content:space-between;border-bottom:2px solid var(--leaf);position:sticky;top:0;z-index:1000}
+    .logo-container{display:flex;flex-direction:column}
+    header img{height:55px}
+    .slogan{font-size:.75rem;font-style:italic;color:var(--gold);margin-top:2px}
+    nav a{margin:0 10px;text-decoration:none;font-weight:600;color:var(--leaf);transition:.3s}
+    nav a:hover{color:var(--navy)}
+    .hero{background:linear-gradient(135deg,var(--navy),var(--leaf));color:var(--white);text-align:center;padding:60px 20px;animation:fadeIn 1.1s ease}
+    .hero h1{font-size:2.3rem;font-weight:700;margin-bottom:12px}
+    .hero p{font-size:1rem;margin-bottom:25px}
+    .hero img{max-width:95%;margin-top:20px;border-radius:12px;box-shadow:0 4px 12px var(--shadow);animation:fadeInUp 1.3s ease}
+    .btn{display:inline-block;background:var(--gold);color:var(--navy);padding:12px 26px;border-radius:50px;font-weight:600;text-decoration:none;transition:.3s}
+    .btn:hover{background:#e6c200;transform:translateY(-2px)}
+    section{padding:50px 20px;max-width:950px;margin:auto;opacity:0;transform:translateY(25px);transition:.7s ease}
+    section.visible{opacity:1;transform:translateY(0)}
+    section h2{font-size:1.7rem;margin-bottom:18px;color:var(--navy);text-align:center}
+    section p{text-align:center;margin-bottom:12px}
+    ul{list-style:none;margin:18px 0;padding:0}
+    ul li{background:var(--muted);margin:8px 0;padding:10px 16px;border-radius:8px;box-shadow:0 2px 4px var(--shadow);font-weight:500}
+    #newsletter a{color:var(--leaf);font-weight:600}
+    footer{background:var(--navy);color:var(--white);text-align:center;padding:20px 15px;margin-top:35px}
+    footer a{color:var(--gold);font-weight:600;text-decoration:none}
+    footer p{margin:6px 0}
+    @keyframes fadeIn{from{opacity:0}to{opacity:1}}
+    @keyframes fadeInUp{from{opacity:0;transform:translateY(25px)}to{opacity:1;transform:translateY(0)}}
+    @media(max-width:768px){.hero h1{font-size:1.8rem}.hero p{font-size:.95rem}nav a{display:inline-block;margin:6px}}
   </style>
 </head>
 <body>
 
 <header>
   <div class="logo-container">
-    <a href="/">
-      <img src="images/logo1.png" alt="TichaAfrica Logo">
-    </a>
+    <a href="/"><img src="images/logo1.png" alt="TichaAfrica Logo" loading="lazy"></a>
     <div class="slogan">Teach Smart. Lead Change.</div>
   </div>
   <nav>
     <a href="#why">Why</a>
     <a href="#alliance">Alliance</a>
-    <a href="#join">Join</a>
+    <a href="#newsletter">Updates</a>
   </nav>
 </header>
 
 <section class="hero">
-  <h2>Teachers Deserve More Than Tools. They Deserve a Voice.</h2>
+  <h1>Teachers Deserve More Than Tools. They Deserve a Voice.</h1>
   <p>Africa’s first teacher-led, mobile-first AI training platform — built by teachers, for African classrooms.</p>
-  <a href="https://tally.so/r/3jrJG9" class="btn">I’m a Teacher — I’m Ready to Lead the Change.</a>
-  <img src="images/hero4.jpg" alt="TichaAfrica Hero">
+  <a href="https://tally.so/r/3jrJG9" class="btn">I’m a Teacher — I’m Ready to Lead the Change</a>
+  <img src="images/hero4.jpg" alt="TichaAfrica Hero" loading="lazy">
 </section>
 
 <section id="why">
-  <h3>Why TichaAfrica Exists</h3>
-  <p>Every day, African teachers achieve the extraordinary—teaching overcrowded classes, with scarce resources, and little recognition. Yet, as AI reshapes global education, their voices are often missing from the table.</p>
-  <p>TichaAfrica exists to change that. We believe the future of learning must be built with teachers, not around them. By aligning with UNESCO’s AI Competency Framework for Teachers (AI CFT) and the African Union Continental AI Strategy, we bridge global innovation with African realities—turning teachers’ expertise into the driving force of AI in our classrooms.</p>
+  <h2>Why TichaAfrica Exists</h2>
+  <p>African teachers achieve the extraordinary daily—teaching overcrowded classes with scarce resources and little recognition. Yet, as AI reshapes global education, their voices are often missing from the table.</p>
+  <p><strong>TichaAfrica exists to change that.</strong> We align UNESCO’s AI Competency Framework for Teachers (AI CFT) with the African Union Continental AI Strategy, bridging global innovation with African realities—making teachers the driving force of AI in our classrooms.</p>
 </section>
 
 <section id="alliance">
-  <h3>Founding Teacher Alliance</h3>
-  <p>Be one of the first 200 teachers to shape Africa’s AI curriculum.</p>
+  <h2>Founding Teacher Alliance</h2>
+  <p>Be among the first 200 teachers shaping Africa’s AI curriculum.</p>
   <ul>
     <li>Founding badge & recognition</li>
     <li>Early access to training modules</li>
@@ -135,7 +84,7 @@
 </section>
 
 <section id="newsletter">
-  <h3>Stay Updated</h3>
+  <h2>Stay Updated</h2>
   <p>Subscribe to our weekly newsletter: <a href="https://tichaafrica.substack.com/" target="_blank">Beyond the Blackboard</a></p>
 </section>
 
@@ -143,6 +92,13 @@
   <p>Contact: <a href="mailto:contact@tichaafrica.com">contact@tichaafrica.com</a></p>
   <p>© 2025 TichaAfrica – Human-First AI for Education</p>
 </footer>
+
+<!-- Minified Scroll Animation Script -->
+<script>
+const sections=document.querySelectorAll("section");
+const reveal=()=>{const t=window.innerHeight*.85;sections.forEach(s=>{const e=s.getBoundingClientRect().top;e<t&&s.classList.add("visible")})};
+window.addEventListener("scroll",reveal);window.addEventListener("load",reveal);
+</script>
 
 </body>
 </html>
