--- a/index.html
+++ b/index.html
@@ -9,47 +9,226 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="images/TichaAfrica_Favicon.png" />
 
-  <!-- Performance: Preload fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
   <style>
-    :root{--navy:#003366;--leaf:#2e9a4d;--gold:#ffd700;--muted:#f8f9fa;--white:#fff;--text:#1a1a1a;--shadow:rgba(0,0,0,.08)}
-    *{margin:0;padding:0;box-sizing:border-box}
-    body{font-family:"Poppins",sans-serif;line-height:1.6;color:var(--text);background:var(--white);scroll-behavior:smooth}
-    header{background:var(--white);padding:12px 24px;display:flex;align-items:center;justify-content:space-between;border-bottom:2px solid var(--leaf);position:sticky;top:0;z-index:1000}
-    .logo-container{display:flex;flex-direction:column}
-    header img{height:55px}
-    .slogan{font-size:.75rem;font-style:italic;color:var(--gold);margin-top:2px}
-    nav a{margin:0 10px;text-decoration:none;font-weight:600;color:var(--leaf);transition:.3s}
-    nav a:hover{color:var(--navy)}
-    .hero{background:linear-gradient(135deg,var(--navy),var(--leaf));color:var(--white);text-align:center;padding:60px 20px;animation:fadeIn 1.1s ease}
-    .hero h1{font-size:2.3rem;font-weight:700;margin-bottom:12px}
-    .hero p{font-size:1rem;margin-bottom:25px}
-    .hero img{max-width:95%;margin-top:20px;border-radius:12px;box-shadow:0 4px 12px var(--shadow);animation:fadeInUp 1.3s ease}
-    .btn{display:inline-block;background:var(--gold);color:var(--navy);padding:12px 26px;border-radius:50px;font-weight:600;text-decoration:none;transition:.3s}
-    .btn:hover{background:#e6c200;transform:translateY(-2px)}
-    section{padding:50px 20px;max-width:950px;margin:auto;opacity:0;transform:translateY(25px);transition:.7s ease}
-    section.visible{opacity:1;transform:translateY(0)}
-    section h2{font-size:1.7rem;margin-bottom:18px;color:var(--navy);text-align:center}
-    section p{text-align:center;margin-bottom:12px}
-    ul{list-style:none;margin:18px 0;padding:0}
-    ul li{background:var(--muted);margin:8px 0;padding:10px 16px;border-radius:8px;box-shadow:0 2px 4px var(--shadow);font-weight:500}
-    #newsletter a{color:var(--leaf);font-weight:600}
-    footer{background:var(--navy);color:var(--white);text-align:center;padding:20px 15px;margin-top:35px}
-    footer a{color:var(--gold);font-weight:600;text-decoration:none}
-    footer p{margin:6px 0}
-    @keyframes fadeIn{from{opacity:0}to{opacity:1}}
-    @keyframes fadeInUp{from{opacity:0;transform:translateY(25px)}to{opacity:1;transform:translateY(0)}}
-    @media(max-width:768px){.hero h1{font-size:1.8rem}.hero p{font-size:.95rem}nav a{display:inline-block;margin:6px}}
+    :root {
+      --navy: #003366;
+      --leaf: #2e9a4d;
+      --gold: #ffd700;
+      --muted: #f8f9fa;
+      --white: #ffffff;
+      --text: #1a1a1a;
+      --shadow: rgba(0, 0, 0, 0.1);
+    }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: "Poppins", sans-serif;
+      line-height: 1.6;
+      color: var(--text);
+      background: var(--white);
+      scroll-behavior: smooth;
+    }
+
+    header {
+      background: var(--white);
+      padding: 15px 30px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      border-bottom: 2px solid var(--leaf);
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+
+    .logo-container {
+      display: flex;
+      flex-direction: column;
+    }
+
+    header img {
+      height: 60px;
+    }
+
+    .slogan {
+      font-size: 0.8rem;
+      font-style: italic;
+      color: var(--gold);
+      margin-top: 2px;
+    }
+
+    nav a {
+      margin: 0 12px;
+      text-decoration: none;
+      font-weight: 600;
+      color: var(--leaf);
+      transition: color 0.3s;
+    }
+
+    nav a:hover {
+      color: var(--navy);
+    }
+
+    /* Hero */
+    .hero {
+      background: linear-gradient(135deg, var(--navy), var(--leaf));
+      color: var(--white);
+      text-align: center;
+      padding: 70px 20px;
+      animation: fadeIn 1.2s ease-in-out;
+    }
+
+    .hero h1 {
+      font-size: 2.4rem;
+      font-weight: 700;
+      margin-bottom: 15px;
+    }
+
+    .hero p {
+      font-size: 1.1rem;
+      margin-bottom: 30px;
+    }
+
+    .hero img {
+      max-width: 95%;
+      margin-top: 25px;
+      border-radius: 12px;
+      box-shadow: 0 6px 18px var(--shadow);
+      animation: fadeInUp 1.4s ease-in-out;
+    }
+
+    /* Buttons */
+    .btn {
+      display: inline-block;
+      background: var(--gold);
+      color: var(--navy);
+      padding: 14px 30px;
+      border-radius: 50px;
+      font-weight: 600;
+      text-decoration: none;
+      transition: transform 0.3s ease, background 0.3s ease;
+    }
+
+    .btn:hover {
+      background: #e6c200;
+      transform: translateY(-3px);
+    }
+
+    /* Sections */
+    section {
+      padding: 60px 20px;
+      max-width: 1000px;
+      margin: auto;
+      opacity: 0;
+      transform: translateY(30px);
+      transition: opacity 0.8s ease, transform 0.8s ease;
+    }
+
+    section.visible {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    section h2 {
+      font-size: 1.8rem;
+      margin-bottom: 20px;
+      color: var(--navy);
+      text-align: center;
+    }
+
+    section p {
+      margin-bottom: 15px;
+      text-align: center;
+    }
+
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 20px 0;
+    }
+
+    ul li {
+      background: var(--muted);
+      margin: 10px 0;
+      padding: 12px 18px;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px var(--shadow);
+      font-weight: 500;
+    }
+
+    /* Newsletter */
+    #newsletter p {
+      margin-bottom: 10px;
+    }
+
+    #newsletter a {
+      color: var(--leaf);
+      font-weight: 600;
+    }
+
+    /* Footer */
+    footer {
+      background: var(--navy);
+      color: var(--white);
+      text-align: center;
+      padding: 25px 15px;
+      margin-top: 40px;
+    }
+
+    footer a {
+      color: var(--gold);
+      font-weight: 600;
+      text-decoration: none;
+    }
+
+    footer p {
+      margin: 8px 0;
+    }
+
+    /* Animations */
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
+    @keyframes fadeInUp {
+      from { opacity: 0; transform: translateY(30px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      nav {
+        margin-top: 10px;
+      }
+      nav a {
+        display: inline-block;
+        margin: 8px;
+      }
+      .hero h1 {
+        font-size: 1.9rem;
+      }
+      .hero p {
+        font-size: 1rem;
+      }
+    }
   </style>
 </head>
 <body>
 
 <header>
   <div class="logo-container">
-    <a href="/"><img src="images/logo1.png" alt="TichaAfrica Logo" loading="lazy"></a>
+    <a href="/">
+      <img src="images/logo1.png" alt="TichaAfrica Logo">
+    </a>
     <div class="slogan">Teach Smart. Lead Change.</div>
   </div>
   <nav>
@@ -63,7 +242,7 @@
   <h1>Teachers Deserve More Than Tools. They Deserve a Voice.</h1>
   <p>Africa’s first teacher-led, mobile-first AI training platform — built by teachers, for African classrooms.</p>
   <a href="https://tally.so/r/3jrJG9" class="btn">I’m a Teacher — I’m Ready to Lead the Change</a>
-  <img src="images/hero4.jpg" alt="TichaAfrica Hero" loading="lazy">
+  <img src="images/hero4.jpg" alt="TichaAfrica Hero">
 </section>
 
 <section id="why">
@@ -93,11 +272,20 @@
   <p>© 2025 TichaAfrica – Human-First AI for Education</p>
 </footer>
 
-<!-- Minified Scroll Animation Script -->
+<!-- Scroll Animation Script -->
 <script>
-const sections=document.querySelectorAll("section");
-const reveal=()=>{const t=window.innerHeight*.85;sections.forEach(s=>{const e=s.getBoundingClientRect().top;e<t&&s.classList.add("visible")})};
-window.addEventListener("scroll",reveal);window.addEventListener("load",reveal);
+  const sections = document.querySelectorAll("section");
+  const revealOnScroll = () => {
+    const triggerBottom = window.innerHeight * 0.85;
+    sections.forEach(sec => {
+      const boxTop = sec.getBoundingClientRect().top;
+      if (boxTop < triggerBottom) {
+        sec.classList.add("visible");
+      }
+    });
+  };
+  window.addEventListener("scroll", revealOnScroll);
+  window.addEventListener("load", revealOnScroll);
 </script>
 
 </body>
