--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>TichaAfrica – Teachers Leading Africa’s AI Education</title>
   <meta name="description" content="TichaAfrica empowers teachers to lead Africa’s AI education revolution. Join the alliance shaping an inclusive, human-first future for learning." />
-  <link rel="icon" type="image/png" href="images/TichaAfrica_Favicon.png" />
+
+  <!-- Favicon -->
+  <link rel="icon" href="images/TichaAfrica_Favicon.png" type="image/png">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 
   <style>
     :root {
@@ -15,17 +20,19 @@
       --muted: #f8f9fa;
       --white: #ffffff;
       --text: #003366;
-      --shadow: rgba(0, 0, 0, 0.25);
     }
 
     body {
-      font-family: 'Segoe UI', Arial, sans-serif;
+      font-family: 'Roboto', sans-serif;
       margin: 0;
       padding: 0;
       color: var(--text);
       background: var(--white);
       line-height: 1.6;
-      overflow-x: hidden;
+    }
+
+    h2, h3 {
+      font-family: 'Poppins', sans-serif;
     }
 
     header {
@@ -43,29 +50,26 @@
       flex-direction: column;
       align-items: center;
       text-align: center;
-      transform: perspective(1000px) rotateX(5deg);
-      text-shadow: 2px 2px 6px var(--shadow);
     }
 
     header img {
       height: 70px;
-      filter: drop-shadow(2px 2px 5px var(--shadow));
     }
 
     .slogan {
-      font-size: 0.9rem;
+      font-size: 0.8rem;
       font-style: italic;
       color: var(--gold);
       margin-top: 5px;
-      text-shadow: 1px 1px 4px var(--shadow);
+      text-align: center;
+      text-shadow: 1px 1px 0 #ccc, 2px 2px 0 #999;
     }
 
     nav a {
-      margin: 0 10px;
+      margin: 0 12px;
       color: var(--leaf);
       text-decoration: none;
       font-weight: bold;
-      transition: color 0.3s ease;
     }
 
     nav a:hover {
@@ -76,56 +80,57 @@
       background: linear-gradient(135deg, var(--navy), var(--leaf));
       color: var(--white);
       text-align: center;
-      padding: 70px 20px;
-      animation: fadeIn 1.2s ease-in-out;
+      padding: 80px 20px;
     }
 
     .hero img {
       max-width: 100%;
       height: auto;
       margin-top: 20px;
-      border-radius: 12px;
-      box-shadow: 0 6px 15px var(--shadow);
+      border-radius: 10px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.3);
     }
 
     .btn {
       display: inline-block;
       background: var(--gold);
       color: var(--navy);
-      padding: 14px 28px;
-      border-radius: 30px;
+      padding: 16px 32px;
+      border-radius: 40px;
       font-weight: bold;
       text-decoration: none;
-      margin-top: 15px;
       transition: all 0.3s ease;
-      box-shadow: 0 6px 0 #b39700, 0 8px 20px var(--shadow);
+      box-shadow: 0 6px #b89f00;
     }
 
     .btn:hover {
       background: #e6c200;
       transform: translateY(-3px);
-      box-shadow: 0 8px 0 #9c7f00, 0 12px 25px var(--shadow);
+      box-shadow: 0 8px #a68b00;
     }
 
     section {
-      padding: 50px 20px;
+      padding: 60px 20px;
       max-width: 1000px;
       margin: 0 auto;
-      opacity: 0;
-      transform: translateY(30px);
-      transition: all 0.6s ease-out;
     }
 
-    section.visible {
+    section[data-animate] {
+      opacity: 0;
+      transform: translateY(30px);
+      transition: all 0.8s ease-out;
+    }
+
+    section[data-animate].visible {
       opacity: 1;
       transform: translateY(0);
     }
 
-    #alliance .alliance-benefits {
+    .alliance-benefits {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
       gap: 20px;
-      margin: 20px 0;
+      margin: 30px 0;
     }
 
     .benefit-card {
@@ -133,14 +138,14 @@
       padding: 20px;
       border-radius: 12px;
       text-align: center;
-      font-weight: bold;
-      box-shadow: 0 6px 0 #ccc, 0 10px 18px var(--shadow);
+      font-weight: 500;
+      box-shadow: 0 6px 12px rgba(0,0,0,0.1);
       transition: all 0.3s ease;
     }
 
     .benefit-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 10px 0 #bbb, 0 15px 25px var(--shadow);
+      transform: translateY(-5px) scale(1.03);
+      box-shadow: 0 12px 20px rgba(0,0,0,0.15);
     }
 
     footer {
@@ -149,17 +154,11 @@
       text-align: center;
       padding: 20px;
       margin-top: 40px;
-      box-shadow: 0 -3px 10px var(--shadow);
     }
 
     footer a {
       color: var(--gold);
       text-decoration: none;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(40px); }
-      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
@@ -179,7 +178,7 @@
   </nav>
 </header>
 
-<section class="hero">
+<section class="hero" data-animate>
   <h2>Teachers Deserve More Than Tools. They Deserve a Voice.</h2>
   <p>Africa’s first teacher-led, mobile-first AI training platform — built by teachers, for African classrooms.</p>
   <p><em>Now, it’s your turn to shape how Africa learns in the age of AI.</em></p>
@@ -187,13 +186,13 @@
   <img src="images/hero4.jpg" alt="TichaAfrica Hero">
 </section>
 
-<section id="why">
+<section id="why" data-animate>
   <h3>Why TichaAfrica Exists</h3>
   <p>Every day, African teachers achieve the extraordinary—teaching overcrowded classes, with scarce resources, and little recognition. Yet, as AI reshapes global education, their voices are often missing from the table.</p>
-  <p>TichaAfrica exists to change that. We believe the future of learning must be built with teachers, not around them. By aligning with <em>UNESCO’s AI Competency Framework for Teachers (AI CFT)</em> and the <em>African Union Continental AI Strategy</em>, we bridge global innovation with African realities—turning teachers’ expertise into the driving force of AI in our classrooms.</p>
+  <p>TichaAfrica exists to change that. We believe the future of learning must be built with teachers, not around them. By aligning with <strong>UNESCO’s AI Competency Framework for Teachers (AI CFT)</strong> and the <strong>African Union Continental AI Strategy</strong>, we bridge global innovation with African realities—turning teachers’ expertise into the driving force of AI in our classrooms.</p>
 </section>
 
-<section id="alliance">
+<section id="alliance" data-animate>
   <h3>Founding Teacher Alliance</h3>
   <p>Be one of the first 200 teachers to shape Africa’s AI curriculum.</p>
   <div class="alliance-benefits">
@@ -205,9 +204,9 @@
   <a href="https://tally.so/forms/3jrJG9/" class="btn">Join the Alliance</a>
 </section>
 
-<section id="newsletter">
+<section id="newsletter" data-animate>
   <h3>Stay Updated</h3>
-  <p><em>Knowledge shared is power multiplied.</em></p>
+  <p>Don’t miss the stories, insights, and breakthroughs from Africa’s AI classrooms.</p>
   <p>Subscribe to our weekly newsletter: <a href="https://tichaafrica.substack.com/" target="_blank">Beyond the Blackboard</a></p>
 </section>
 
@@ -217,17 +216,18 @@
 </footer>
 
 <script>
-  // Reveal sections on scroll
-  const sections = document.querySelectorAll("section");
-  const observer = new IntersectionObserver(entries => {
-    entries.forEach(entry => {
-      if (entry.isIntersecting) {
-        entry.target.classList.add("visible");
+  // Animation on scroll
+  const sections = document.querySelectorAll("section[data-animate]");
+  const reveal = () => {
+    sections.forEach(sec => {
+      const top = sec.getBoundingClientRect().top;
+      if (top < window.innerHeight - 100) {
+        sec.classList.add("visible");
       }
     });
-  }, { threshold: 0.2 });
-
-  sections.forEach(section => observer.observe(section));
+  };
+  window.addEventListener("scroll", reveal);
+  window.addEventListener("load", reveal);
 </script>
 
 </body>
