--- a/alliance-form.html
+++ b/alliance-form.html
@@ -1,106 +1,131 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Teacher Alliance Form — Ticha Africa</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>TichaAfrica Founding Teacher Alliance</title>
+  <meta name="description" content="Join the TichaAfrica Founding Teacher Alliance and help shape Africa’s first teacher-led, mobile-first AI training for education." />
+
   <style>
+    :root {
+      --navy: #003366;
+      --leaf: #2e9a4d;
+      --gold: #ffd700;
+      --muted: #f8f9fa;
+      --white: #ffffff;
+      --text: #003366;
+    }
+
     body {
-      font-family: Arial, sans-serif;
-      background: #f8f9fa;
-      color: #003366;
+      font-family: 'Roboto', sans-serif;
+      margin: 0;
+      padding: 0;
+      color: var(--text);
+      background: var(--white);
       line-height: 1.6;
-      padding: 20px;
     }
-    .form-step { display: none; }
-    .form-step.active { display: block; }
+
+    header {
+      background: var(--white);
+      padding: 16px 24px;
+      border-bottom: 2px solid var(--leaf);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    header img {
+      height: 60px;
+    }
+
+    .hero {
+      background: linear-gradient(135deg, var(--navy), var(--leaf));
+      color: var(--white);
+      text-align: center;
+      padding: 60px 20px;
+    }
+
+    .hero img {
+      max-width: 100%;
+      height: auto;
+      margin-top: 20px;
+      border-radius: 12px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+    }
+
+    h1, h2 {
+      font-family: 'Poppins', sans-serif;
+    }
+
     .btn {
-      background: #2e9a4d;
-      color: white;
-      padding: 10px 20px;
-      border: none;
-      cursor: pointer;
-      margin-top: 10px;
-      border-radius: 5px;
+      display: inline-block;
+      background: var(--gold);
+      color: var(--navy);
+      padding: 14px 28px;
+      border-radius: 40px;
+      font-weight: bold;
+      text-decoration: none;
+      transition: all 0.3s ease;
+      margin-top: 20px;
     }
-    .btn:hover { background: #24803d; }
+
+    .btn:hover {
+      background: #e6c200;
+      transform: translateY(-2px);
+    }
+
+    section {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 40px 20px;
+    }
+
+    footer {
+      background: var(--navy);
+      color: var(--white);
+      text-align: center;
+      padding: 20px;
+      margin-top: 40px;
+    }
+
+    footer a {
+      color: var(--gold);
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
 
-  <h1>Join the Founding Teacher Alliance</h1>
-  <p>Answer a few short questions. It will take less than 3 minutes.</p>
+<header>
+  <a href="/">
+    <img src="images/logo.png" alt="TichaAfrica Logo">
+  </a>
+</header>
 
-  <form name="teacher-alliance" method="POST" data-netlify="true">
-    <!-- Netlify hidden input -->
-    <input type="hidden" name="form-name" value="teacher-alliance">
+<section class="hero">
+  <h1>Founding Teacher Alliance</h1>
+  <p>Be one of the 200 teachers shaping Africa’s first teacher-led AI training for education.</p>
+  <img src="images/Alliance_hero.png" alt="TichaAfrica Founding Teacher Alliance">
+  <a href="https://tally.so/r/3jrJG9" class="btn">Join the Alliance</a>
+</section>
 
-    <!-- Step 1 -->
-    <div class="form-step active">
-      <label>What is your full name?</label><br>
-      <input type="text" name="name" required>
-      <button type="button" class="btn next">Next</button>
-    </div>
+<section>
+  <h2>Why Join?</h2>
+  <p>Teachers across Africa make learning possible every day with limited tools and endless creativity. Now, with AI transforming education, it’s time for teachers to lead the change — not adapt to it.</p>
+  <p>By joining, you will:</p>
+  <ul>
+    <li>🌟 Gain recognition as a Founding Teacher</li>
+    <li>📘 Test and shape AI-powered learning tools</li>
+    <li>🗣️ Influence policies and training design</li>
+    <li>🤝 Mentor and inspire other educators across Africa</li>
+  </ul>
+  <a href="https://tally.so/r/3jrJG9" class="btn">Apply Now</a>
+</section>
 
-    <!-- Step 2 -->
-    <div class="form-step">
-      <label>Which country are you teaching in?</label><br>
-      <input type="text" name="country" required>
-      <button type="button" class="btn prev">Back</button>
-      <button type="button" class="btn next">Next</button>
-    </div>
-
-    <!-- Step 3 -->
-    <div class="form-step">
-      <label>Are you a rural or urban teacher?</label><br>
-      <select name="context" required>
-        <option value="">Select</option>
-        <option>Rural</option>
-        <option>Urban</option>
-      </select>
-      <button type="button" class="btn prev">Back</button>
-      <button type="button" class="btn next">Next</button>
-    </div>
-
-    <!-- Step 4 -->
-    <div class="form-step">
-      <label>What is your biggest classroom challenge?</label><br>
-      <textarea name="challenge" required></textarea>
-      <button type="button" class="btn prev">Back</button>
-      <button type="button" class="btn next">Next</button>
-    </div>
-
-    <!-- Step 5 -->
-    <div class="form-step">
-      <label>What innovation or strategy has worked well for you?</label><br>
-      <textarea name="innovation" required></textarea>
-      <button type="button" class="btn prev">Back</button>
-      <button type="submit" class="btn">Submit</button>
-    </div>
-  </form>
-
-  <script>
-    const steps = document.querySelectorAll(".form-step");
-    let currentStep = 0;
-
-    function showStep(step) {
-      steps.forEach((s, i) => s.classList.toggle("active", i === step));
-    }
-
-    document.querySelectorAll(".next").forEach(btn => {
-      btn.addEventListener("click", () => {
-        currentStep++;
-        showStep(currentStep);
-      });
-    });
-
-    document.querySelectorAll(".prev").forEach(btn => {
-      btn.addEventListener("click", () => {
-        currentStep--;
-        showStep(currentStep);
-      });
-    });
-  </script>
+<footer>
+  <p>Contact us: <a href="mailto:contact@tichaafrica.com">contact@tichaafrica.com</a></p>
+  <p>© 2025 TichaAfrica – Teachers Leading Africa’s AI Education</p>
+</footer>
 
 </body>
 </html>
