--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     <div class="benefit-card">🗣️ Direct input into policies and tools</div>
   </div>
   <p><em>Your contribution today sets the foundation for generations of learners tomorrow.</em></p>
-  <a href="alliance-form.html" class="btn">Join the Alliance</a>
+  <a href="alliance.html" class="btn">Join the Alliance</a>
 </section>
 
 <section id="newsletter" data-animate>
