--- a/alliance.html
+++ b/alliance.html
@@ -101,7 +101,7 @@
 </div>
   
 <header>
-  <img src="images/logo.png" alt="TichaAfrica Logo">
+  <img src="images/logo1.png" alt="TichaAfrica Logo">
 </header>
 
 <div class="hero">
