--- a/alliance-form.html
+++ b/alliance-form.html
@@ -105,7 +105,7 @@
 
   <!-- Header -->
   <header>
-    <img src="images/logo.png" alt="TichaAfrica Logo">
+    <img src="images/logo1.png" alt="TichaAfrica Logo">
   </header>
 
   <!-- Hero Section -->
