--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 </header>
 
 <section class="hero" data-animate>
-  <h2>AI is here — but who will shape it in Africa’s classrooms?</h2>
+  <h2>AI Education for Teachers</h2>
   <p>TichaAfrica puts teachers at the centre of AI education. Africa’s first teacher-led, mobile-first AI training platform — built by teachers, for teachers.</p>
   <a href="https://tally.so/r/3jrJG9" class="btn">Share Your Insights</a>
   <a href="alliance.html" class="btn">Join the Alliance</a>
